helm/istio.rancher.yaml
# https://cert-manager.io/docs/configuration/acme/http01/
# https://cert-manager.io/docs/usage/certificate/
# https://istio.io/latest/zh/docs/reference/config/networking/gateway/
# https://istio.io/latest/zh/docs/reference/config/networking/virtual-service/
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    name: istio
  spec:
    controller: istio.io/ingress-controller
- apiVersion: cert-manager.io/v1
  kind: ClusterIssuer
  metadata:
    name: letsencrypt-issuer
  spec:
    acme:
      server: https://acme-v02.api.letsencrypt.org/directory
      email: renlm@21cn.com
      privateKeySecretRef:
        name: letsencrypt-issuer
      solvers:
      - selector: {}
        http01:
          ingress:
            class: istio
- apiVersion: cert-manager.io/v1
  kind: Certificate
  metadata:
    name: istio-gateway
    namespace: istio-system
  spec:
    secretName: tls-istio-gateway
    duration: 2160h
    renewBefore: 360h
    subject:
      organizations:
      - renlm.cn
    dnsNames:
    - renlm.cn
    - www.renlm.cn
    - rancher.renlm.cn
    - grafana.renlm.cn
    - jenkins.renlm.cn
    - amqp.renlm.cn
    - rabbitmq.renlm.cn
    - prometheus.renlm.cn
    - clickhouse.renlm.cn
    - otel.renlm.cn
    - gw.renlm.cn
    - mygraph.renlm.cn
    issuerRef:
      name: letsencrypt-issuer
      kind: ClusterIssuer
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    name: istio-gateway
    namespace: istio-system
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
      - renlm.cn
      - www.renlm.cn
      - rancher.renlm.cn
      - grafana.renlm.cn
      - jenkins.renlm.cn
      - amqp.renlm.cn
      - rabbitmq.renlm.cn
      - prometheus.renlm.cn
      - clickhouse.renlm.cn
      - otel.renlm.cn
      - gw.renlm.cn
      - mygraph.renlm.cn
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
      - renlm.cn
      - www.renlm.cn
      - rancher.renlm.cn
      - grafana.renlm.cn
      - jenkins.renlm.cn
      - amqp.renlm.cn
      - rabbitmq.renlm.cn
      - prometheus.renlm.cn
      - clickhouse.renlm.cn
      - otel.renlm.cn
      - gw.renlm.cn
      - mygraph.renlm.cn
      tls:
        mode: SIMPLE
        credentialName: tls-istio-gateway
        minProtocolVersion: TLSV1_2
    - port:
        number: 443
        protocol: HTTPS
        name: tls
      hosts:
      - kubernetes.renlm.cn
      tls:
        mode: PASSTHROUGH
    - port:
        number: 6379
        protocol: TCP
        name: redis
      hosts:
      - redis.io
    - port:
        number: 5432
        protocol: TCP
        name: postgres
      hosts:
      - postgres.io
    - port:
        number: 3306
        protocol: TCP
        name: mysql
      hosts:
      - mysql.io
    - port:
        number: 8123
        protocol: TCP
        name: clickhouse
      hosts:
      - clickhouse.io
    - port:
        number: 5672
        protocol: TCP
        name: rabbitmq
      hosts:
      - rabbitmq.renlm.cn
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    name: rancher
    namespace: istio-system
  spec:
    hosts:
    - rancher.renlm.cn
    gateways:
    - istio-gateway
    http:
    - match:
      - port: 80
      - port: 443
      route:
      - weight: 100
        destination:
          host: rancher.cattle-system.svc.cluster.local
          port:
            number: 80
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    name: kubernetes
    namespace: istio-system
  spec:
    hosts:
    - kubernetes.renlm.cn
    gateways:
    - istio-gateway
    tls:
    - match:
      - port: 443
        sniHosts:
        - kubernetes.renlm.cn
      route:
      - weight: 100
        destination:
          host: kubernetes.default.svc.cluster.local
          port:
            number: 443
